menu header corrigido para telas menos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </main>
 
     <footer>
-        <p>Site Criado por <a href="https://github.com/BrunoHenrique12" target="_blank">Bruno Henrique</a></p>
+        <p>Site Criado por <a href="https://github.com/BrunoHenrique12" target="_blank">Bruno Henrique</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a></p>
     </footer>
 </body>
 </html>
